# pompyboard

./: .code-workspace  .gitignore  BRANDING.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  devenv.nix  devenv.yaml
.bmad-core/: install-manifest.yaml
.github/: sync-readme.yml
.github/workflows/: ci.yml  sync-readme.yml
3d/: README.md  pompyboard.FCStd
firmware/: CALIBRATION.md  CALIBRATION_RESEARCH.md  Cargo.toml  README.md  memory.x  stm32f401.svd.svd
firmware/.cargo/: config.toml
firmware/src/: main.rs  mux.rs  sensor.rs  tablet.rs  usb.rs
pcb/: .gitignore  README.md  pompyboard.kicad_prl  pompyboard.kicad_pro  pompyboard.kicad_sch  sensor.kicad_sch  sensor_column.kicad_sch
web/: .env.example  .env.local.example  .prettierrc.json  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test-subscribe.mjs  tsconfig.json
web/drizzle/: 0000_complete_meteorite.sql
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/src/: auth.ts  env.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/subscribe/: route.ts
web/src/app/shop/[product]/: page.tsx
web/src/app/shop/mk1lite/: page.tsx
web/src/app/shop/mk1pro/: page.tsx
web/src/app/technology/: page.tsx
web/src/components/: avatar.tsx  footer.tsx  mailing-list-form.tsx  navbar.tsx  shop-item.tsx  sign-in.tsx  sign-out.tsx  spec-card.tsx
web/src/db/: index.ts  schema.ts
web/src/db/queries/: subscribers.ts
web/src/lib/: get-client-ip.ts  rate-limit.ts
web/src/lib/validations/: subscriber.ts
