[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
nb = "1.1.0"
stm32f4xx-hal = { version = "0.22.1", features = [
    "stm32f401",
    "gpio-f401",
    "usb_fs",
    "defmt",
] }
serde = { version = "1.0.219", default-features = false }

# USB
usb-device = "0.3.2"
usbd-hid = "0.8.2"

# See https://defmt.ferrous-systems.com/setup
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
